[gd_scene load_steps=5 format=3 uid="uid://dgdmryq5bt0oh"]

[ext_resource type="Script" uid="uid://c6ja0qdymgttk" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/HeaderControl/parts/BuffsAndDebuffs/buffs_and_debuffs.gd" id="1_wsrnt"]
[ext_resource type="PackedScene" uid="uid://ccpunmv3ei3ig" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/HeaderControl/parts/BuffsAndDebuffs/BuffOrDebuffTag/BuffOrDebuffTag.tscn" id="2_acgxw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_acgxw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_acgxw"]
bg_color = Color(1, 0.749, 0.2, 0.863)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.580392)
shadow_size = 1
shadow_offset = Vector2(3, 3)

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_acgxw")
script = ExtResource("1_wsrnt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FloorBuffsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Tag" parent="MarginContainer/VBoxContainer/HBoxContainer/FloorBuffsContainer" instance=ExtResource("2_acgxw")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_acgxw")

[node name="RingBuffsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="RoomBuffContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1
